--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.gamerstore.gamerstoreapp.MainActivity">
 
     <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/ic_gamer_store_logo"/>
 
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f3681b"
+        android:layout_marginBottom="40dp"
+        android:text="@string/slogan"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"/>
+
+    <Button
+        android:id="@+id/btnListar"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:textSize="16sp"
+        android:padding="20dp"
+        android:layout_marginBottom="25dp"
+        android:textColor="#fff"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/btn_listar"
+        android:onClick="listar"/>
+
+    <Button
+        android:id="@+id/btnSalir"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:textSize="16sp"
         android:padding="20dp"
         android:textColor="#fff"
         android:layout_gravity="center_horizontal"
-        android:text="@string/btn_listar"/>
+        android:text="@string/btn_salir"
+        android:onClick="salir"/>
 
 </LinearLayout>
