--- a/app/src/main/res/layout/activity_listar_disenios.xml
+++ b/app/src/main/res/layout/activity_listar_disenios.xml
@@ -6,9 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.gamerstore.gamerstoreapp.ListarDiseniosActivity">
 
-    <TextView
-        android:layout_width="match_parent"
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="292dp"
         android:layout_height="wrap_content"
-        android:text="Holi"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp" >
+
+
+    </ListView>
 
 </LinearLayout>
