--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,14 +15,13 @@
     <TextView
         android:id="@+id/descripcion"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#000"
         android:paddingLeft="6dp"
         android:paddingTop="6dp"
-        android:textSize="25sp"
-        android:textStyle="bold"
         android:textColor="#fff"
-        />
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
