--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
 
     <TextView
@@ -15,6 +15,24 @@
     <TextView
         android:id="@+id/descripcion"
         android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#000"
+        android:paddingLeft="6dp"
+        android:paddingTop="6dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="#fff"
+        />
+
+    <ImageView
+        android:id="@+id/foto"
+        android:layout_width="289dp"
+        android:layout_height="406dp"
+        android:padding="5dp"
+        />
+    <TextView
+        android:id="@+id/categoria"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:background="#000"
         android:paddingLeft="6dp"
@@ -23,5 +41,15 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/preciounitario"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:paddingLeft="6dp"
+        android:paddingTop="6dp"
+        android:textColor="#fff"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
