--- a/app/src/main/res/layout/activity_listar_disenios.xml
+++ b/app/src/main/res/layout/activity_listar_disenios.xml
@@ -2,18 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/negro"
+    android:background="#1f41dc"
     android:orientation="vertical" >
 
 
     <ListView
         android:id="@android:id/list"
-        android:layout_width="292dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp" >
-
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
     </ListView>
 
 </LinearLayout>
